# CLRTY-WALLET-INTEGRATION

./: .gitignore  .mailmap  DOWNLOADS.md  Makefile  README.md  package.json
.githooks/: prepare-commit-msg
compliance/: integration_package_report.json
docs/: GIT_ATTRIBUTION.md  PRISM_CLI_INTEGRATION.md
docs/audit/: INVESTOR_SECURITY_SUMMARY.md  SECURITY_AUDIT_COMPLETION_GATES.md  audit_data_room.md  internal_audit_report.md
downloads/: README.md  access_packs_manifest.json
downloads/access_packs/: AP-AGENTS-01.json  AP-DATA-01.json  AP-DATA-02.json  AP-DEV-CLI.json  AP-DEV-LOCALNET.json  AP-DEV-SIMULATOR.json  AP-DX-01.json  AP-EXAMPLES-01.json  AP-EXAMPLES-02.json  AP-FULL.json  AP-HELIX-01.json  AP-HELIX-02.json  AP-LABS-01.json  AP-LEARN-01.json  AP-RPC-01.json  AP-SDK-FULL.json  AP-SDK-GO.json  AP-SDK-JS.json  AP-SDK-PY.json  AP-SDK-RUST.json  AP-SKILLS-01.json  AP-SKILLS-02.json  AP-TOKEN-01.json  AP-TOKEN-02.json  AP-WALLET-01.json  AP-WALLET-02.json  AP-WALLET-03.json  AP-WALLET-DIR.json  AP-WALLET-INT.json
integration-package/: PARTNER_OUTREACH_LETTER.md  README.md  ZERO_FRICTION_PACKET.md  manifest.json
integration-package/outreach/: sovereign_partnership_deal.md
integration-package/sdk/: README.md  eip747-watchAsset.json  integrate.ts
portal/: directory.html  index.html
scripts/: build_kit.sh  rewrite-history-no-cursor.sh  setup-git-hooks.sh  verify_wallet_nodes.py  wallet_directory_stress.sh
sdk/: README.md
sdk/rust/clrty-client/: Cargo.toml
sdk/rust/clrty-client/src/: Cargo.toml  lib.rs
wallet-integration/: README.md
(+54 files in other folders)
