[package]
name = "clrty-client"
version.workspace = true
edition.workspace = true
description = "Thin HTTP client for clrty-api"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
